--- a/client/status-tracker/src/styles/studentDashboard.module.css
+++ b/client/status-tracker/src/styles/studentDashboard.module.css
@@ -1,6 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@300&display=swap');
+
 .body{
-    background-color: black;
+    background-color: #0c2233;
 }
+
+.font{
+    font-family: 'Sofia Sans', sans-serif;
+    font-size: 40px;
+    color: #3b47f7;
+}
+
 .container{
     margin:0 auto;
     width: 70%;
