--- a/client/status-tracker/src/styles/login.module.css
+++ b/client/status-tracker/src/styles/login.module.css
@@ -1,73 +1,70 @@
 .form {
-
-    height: 85vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .inputBox {
-    height: 45px;
-    width: 300px;
-    border-radius: 10px;
-    padding-left: 15px;
-    padding-right: 15px;
-    color: white;
-    background-color: #243847;
-    margin-top: -6px;
+  height: 45px;
+  width: 300px;
+  border-radius: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #9ca3af;
+  background-color: #243847;
+  margin-top: -6px;
 }
 
 .inputBox:focus {
-    outline: none
+  outline: none;
 }
 
 .submitButton {
-
-    background-color: #3b47f7;
-    height: 45px;
-    width: 120px;
-    border-radius: 5px;
-    transition: 0.3s;
-    margin-bottom: 15px;
+  background-color: #3b47f7;
+  height: 45px;
+  width: 120px;
+  border-radius: 5px;
+  transition: 0.3s;
+  margin-bottom: 15px;
 }
 
 .submitButton:hover {
-    /* background-color:transparent; */
-    /* border: 1px solid #3b47f7; */
-    /* color:#7b83fc; */
-    box-shadow: 0px 0px 10px 1px #3b47f7;
-    transition: 0.3s;
+  /* background-color:transparent; */
+  /* border: 1px solid #3b47f7; */
+  /* color:#7b83fc; */
+  box-shadow: 0px 0px 10px 1px #3b47f7;
+  transition: 0.3s;
 }
 
 .loginText {
-    margin-bottom: 20px;
-    font-size: 50px;
-    font-weight: light;
+  margin-bottom: 20px;
+  font-size: 50px;
+  font-weight: light;
 }
 
 .rememberMe {
-    width: 145px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: -10px;
-    margin-bottom: 20px;
+  width: 145px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: -10px;
+  margin-bottom: 20px;
 }
 
 .rMe {
-    padding-bottom: 3px;
-    font-weight: light;
+  padding-bottom: 3px;
+  font-weight: light;
 }
 
 .enterYourCredentials {
-    font-weight: light;
-    margin-bottom: 20px;
-
+  font-weight: light;
+  margin-bottom: 20px;
 }
 
 .checkBox {
-    height: 15px;
-    width: 15px;
-    color: red;
+  height: 15px;
+  width: 15px;
+  color: red;
 }
