--- a/client/status-tracker/src/styles/SignUp.module.css
+++ b/client/status-tracker/src/styles/SignUp.module.css
@@ -61,3 +61,30 @@
   box-shadow: 0px 0px 10px 1px #3b47f7;
   transition: 0.3s;
 }
+
+.checkBoxes{
+
+  display: flex;
+  width:300px;
+  align-items: center;
+  padding-left: 15px;
+  text-transform: capitalize; 
+  margin-bottom: 5px;
+  }
+
+#passwordBox{
+  margin-top:10px;
+}
+
+.department{
+  margin-bottom: -10px;
+}
+
+.login{
+  color:#3b47f7;
+  cursor: pointer;
+}
+
+.login:hover{
+  text-shadow: 0px 1px 4px #3b47f7;
+}
