--- a/client/status-tracker/src/styles/login.module.css
+++ b/client/status-tracker/src/styles/login.module.css
@@ -68,3 +68,12 @@
   width: 15px;
   color: red;
 }
+
+.login{
+  color:#3b47f7;
+  cursor: pointer;
+}
+
+.login:hover{
+  text-shadow: 0px 1px 4px #3b47f7;
+}
